--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Revitalizando Espaços: Sustentabilidade e Parcerias para um Futuro Melhor</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Projeto do Etec de portas abertas, incentiva e proporciona soluçoes para areas inutilizadas dentro de um ambiente social.">
+  <meta name="keywords" content="Sustentável, Projeto, Etec Hortolândia, Etec, Espaços">
+  <meta name="Author" content="Diogo Costa">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/Logotipo-projeto-simples-Photoroom.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
